--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css" />
-<link rel="stylesheet" href="font-awesome/css/font-awesome.css">
-<link rel="stylesheet" href="../css/global.css" />
+<link rel="stylesheet" href="font_awesome/css/font-awesome.css">
+<link rel="stylesheet" href="css/global.css" />
 
 <style type="text/css">
   input#private_url { width: 80%; }
 </style>
 
-<script language="Javascript" src="js/vendor/jquery-1.7.2.dev.js"></script>
+<script language="Javascript" src="js/vendor/jquery-1.8.2.js"></script>
 <script language="Javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 <!-- <script language="Javascript" src="http://code.jquery.com/jquery-migrate-1.0.0.js"></script> -->
 <script language="Javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script language="Javascript" src="js/vendor/underscore-1.4.2.dev.js"></script>
+<script language="Javascript" src="js/vendor/underscore-1.4.2.min.js"></script>
 <script language="Javascript" src="js/vendor/backbone-0.9.9.dev.js"></script>
 <script language="Javascript" src="js/vendor/knockout-2.2.min.js"></script>
 <script language="Javascript" src="js/tee.js"></script>
@@ -26,21 +26,21 @@
 <script language="Javascript" src="wysihtml5/dist/wysihtml5-0.3.0.min.js"></script>
 
 
-<script type="text/javascript" src="js/Dynamo/Core.js"></script>
+<script type="text/javascript" src="dynamo/Core.js"></script>
 <script type="text/javascript">
   Dynamo.TriremeURL = "https://165.124.171.122:3347"
 </script>
-<script type="text/javascript" src="js/Dynamo/Core.Models.js"></script>
+<script type="text/javascript" src="dynamo/Core.Models.js"></script>
 <script type="text/javascript">
   Dynamo.XelementClass = Dynamo.UnitaryXelement;
 </script>
-<script type="text/javascript" src="js/Dynamo/Core.Collections.js"></script>
-<script type="text/javascript" src="js/Dynamo/Core.Views.js"></script>
+<script type="text/javascript" src="dynamo/Core.Collections.js"></script>
+<script type="text/javascript" src="dynamo/Core.Views.js"></script>
 
 
-<script type="text/javascript" src="js/Dynamo/Guides.Models.js"></script>
-<script type="text/javascript" src="js/Dynamo/Guides.Collections.js"></script>
-<script type="text/javascript" src="js/Dynamo/Guides.Views.js"></script>
+<script type="text/javascript" src="dynamo/Guides.Models.js"></script>
+<script type="text/javascript" src="dynamo/Guides.Collections.js"></script>
+<script type="text/javascript" src="dynamo/Guides.Views.js"></script>
 <script type="text/javascript" src="js/initial_load.js"></script>
 
 <script id="choose-xelement-from-collection" type="text/underscore_template">
@@ -287,8 +287,9 @@
   <td class="attribute target">
     <select name="target">
       <% _.each(actionTargets, function(selector) { %>
-        <option value="<%= selector %>" 
-                <% if (action.target == selector ) { %> selected="selected" <% }; %> ><%= selector %></option>
+        <option value="<%= selector %>" <% if (action.target == selector ) { %> selected="selected" <% }; %> >
+          <%= selector %>
+        </option>
       <% }); %>
     </select>
   </td>
@@ -305,11 +306,7 @@
 
 <script type="text/javascript" language="javascript">
 
-Dynamo.CurrentUser = function() { 
-  Dynamo._CurrentUser = new User();
-  Dynamo._CurrentUser.id = Dynamo.CURRENT_USER_ID;
-  return Dynamo._CurrentUser
-};
+Dynamo.AUTHENTICATING_USER_ID = function() { return "TEST-USER-GUID" };
 
 // var GoogleDocXelView = Backbone.View.extend({
   
@@ -554,7 +551,7 @@ $(window).load(function() {
 
   // File -> Publish to the Web -> Start Publishing
 
-  // var doc = new GoogleDocumentXel({ private_url: "https://docs.google.com/document/d/16AD26pGzmjuzqkY_xkIhsA6SnCdoDHJlzHmPYr6XyUk/edit#heading=h.49jwl5fof01u "});
+  // var doc = new GoogleDocumentXel({ private_url: "https://docs.google.com/document/d/16AD26pGzmjuzqkY_xkIhsA6SnCdoDHJlzHmPYr6XyUk/edit#heading=h.49jwl5fof01u"});
   // var editDocView = new GoogleDocXelView({
   //       el: "div#google_doc",
   //       model: doc
