Add state to EditGuideView

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 
 <style type="text/css">
   input#private_url { width: 80%; }
+
+  .choose_element:hover { 
+    cursor: hand; 
+    cursor: pointer; 
+  }
+
 </style>
 
+<script language="Javascript" src="js/vendor/state-machine.min.js"></script>
 <script language="Javascript" src="js/vendor/jquery-1.8.2.js"></script>
 <script language="Javascript" src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 <!-- <script language="Javascript" src="http://code.jquery.com/jquery-migrate-1.0.0.js"></script> -->
@@ -144,30 +151,105 @@
 
 <script id="edit-guide-template" type="text/underscore-template">
   <fieldset>
-    <div class="save_status"></div>
+    
     <div id="guide_attributes">
-      <input type="text" placeholder="Guide Title" id="guide_title" value="<%= guide.title %>" class="span6">
-      <input id="guided_page_url"
-              type="text"
-              class="span12" 
-              placeholder="URL of the page this guide is for" value="<%= guide.guided_page_url %>">
-      <div class="btn-toolbar"><button class="load-guided-page btn"><i class="icon-upload-alt"></i> Load Referred Page</button></div>
-      <hr>
-      <input id="private_gdoc_url" 
-              type="text" 
-              class="span12"
-              placeholder="Google Drive Document URL" value="<%= guide.private_gdoc_url %>">
-      <div class="btn-toolbar"><button class="import btn"><i class="icon-cloud-download"></i> Import From Google Doc</button></div>
-    </div>
-    <hr>
-    <div id="slides"></div>
-    <label class="checkbox">
-      Confirm <input id="confirm_delete" type="checkbox"> 
-    </label>
-    <div class="btn-toolbar">
-      <button class="save btn btn-primary">Save</button>
-      <button class="btn btn-danger"><i class="icon-trash"></i> Delete</button>
-    </div>
+      <label class="text" for="guide_title">Title 
+        <input type="text" placeholder="Guide Title" id="guide_title" value="<%= guide.title %>" class="span6">
+      </label>  
+      <%; console.log("guidedPageState: ", guidedPageState); if (guidedPageState == "blank") { %>
+        <h3> Guided Page </h3>
+        <div><p>
+          Specify the current version of the page for which this guide is being developed.   
+          If you <strong>do not know</strong> what page you are developing this guide for, 
+          you may have <strong>larger problems than I am able to help you with.</strong>
+        </p></div>
+        <label class="text" for="guided_page_url">URL 
+          <input id="guided_page_url"
+                type="text"
+                class="span12" 
+                placeholder="URL of the page this guide is for" value="<%= guide.guided_page_url %>">
+        </label>
+        <div class="btn-toolbar">
+          <button class="load-guided-page btn btn-primary"><i class="icon-upload-alt"></i> Load Guided Page</button>
+        </div>        
+      <% } else { %> 
+        <label class="text" for="guided_page_url">URL 
+          <input id="guided_page_url"
+                type="text"
+                class="span12" 
+                placeholder="URL of the page this guide is for" 
+                value="<%= guide.guided_page_url %>"
+                disabled="disabled">
+        </label>
+        <div class="btn-toolbar">
+          <button class="load-guided-page btn"><i class="icon-upload-alt"></i> Reload</button>
+          <button 
+            class="clear-guided-page btn btn-danger"
+            title="Changing the page to which this guide refers to has a high likelihood of screwing things up.  Make sure you <strong>know what you are doing.</strong>"
+          ><i class="icon-upload-alt"></i> Clear Guided Page</button>
+        </div>
+
+      <% }; %>
+
+      <% if ( (guidedPageState != "blank") && (gDocState == "blank") ) { %>
+        <hr>
+        <div>
+          <h3> Google Doc Import </h3>
+          <p>Now, you must specify an initial import of slide content from a google doc.</p>
+          <p>In order for the import to succeed, The Google Doc:
+            <ul>
+              <li>Must have every page begin with a <strong><em>Title</em></strong> element</li>
+              <li>At the end of each section that you would like to be its own slide, insert a <strong><em>Page Break</em></strong> 
+                  ('Ctrl+Enter' keys, or Insert -> Page Break) 
+              </li>
+              <li>The Google Doc must be <strong><em>Published to the web</em></strong> (File -> Publish to the web...)</li>
+            </ul>
+          </p>
+          <p>Please provide the private URL of the google document (not the one given to you in the 'Publish to the web...' Dialog)</p>     
+          <input id="private_gdoc_url" 
+                  type="text" 
+                  class="span12"
+                  placeholder="Google Drive Document URL" 
+                  value="<%= guide.private_gdoc_url %>" >
+          <div class="btn-toolbar"><button class="import btn btn-primary"><i class="icon-cloud-download"></i> GDoc Import</button></div>
+        </div>
+      <% }; %>
+
+      <% if ( (guidedPageState != "blank") && (gDocState != "blank") ) { %>
+        <hr>
+        <div>
+          <h3> Google Doc Import </h3>     
+          <input id="private_gdoc_url" 
+                  type="text" 
+                  class="span12"
+                  placeholder="Google Drive Document URL" 
+                  value="<%= guide.private_gdoc_url %>" 
+                  disabled="disabled">
+
+          <div class="btn-toolbar" 
+            title="re-importing the document will wipe any changes (including actions) you have made to slides here in the guide editor">
+            <button class="reimport btn btn-danger"><i class="icon-cloud-download"></i> GDoc Import</button>
+            <button class="clear-import btn btn-danger"
+              title="Clearing and importing from another document will wipe any changes (including actions) that you have made in the guide editor"
+              ><i class="icon-cloud-download"></i> Clear Import</button>
+          </div>
+        </div>
+      <% }; %>
+
+      <% if ( (guidedPageState != "blank") && (gDocState != "blank") ) { %> 
+        <hr>
+        <div id="slides"></div>
+        <hr>
+        <div class="save_status"></div>
+        <div class="btn-toolbar">
+          <button class="save btn btn-primary">Save Guide</button>
+          <button class="btn btn-danger">
+            <i class="icon-trash"></i> Delete
+            <label class="checkbox"> Confirm Delete<input id="confirm_delete" type="checkbox"> </label>
+          </button>
+        </div>
+      <% }; %>  
+
   </fieldset>
 </script>
 
@@ -507,8 +589,6 @@ loadPage = function() {
     editGuideView.on("guided_page:loaded", function() {
       $( "div#iframe-container").resizable({ alsoResize: "iframe#guided-page" });
       _.each(editGuideView.usableElements, function(el, i) {
-        $("span#elements_title").text("Available Elements");
-        $("div#available_elements").append("<span>"+el.tagName.toLowerCase()+"#"+el.idName+"."+el.className+", </span>");
         if ( typeof(editSlideView) !== "undefined" ) {
           editSlideView.options.actionTargets = editGuideView.usableElements;
           editSlideView.render();
