--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   
   <div>
     <% if (_.isEmpty(elements)) { %>
-      <div class="list-item yellow-header"><p>There are no existing <%= collection_name %></p></div>
+      <div class="list-item yellow-header"><p>There are no existing <%= collection_name %>s</p></div>
     <% } else { %>
       <h4><label>Choose One:</label></h4>
       <ul style="list-style: none;">
