--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@ loadPage = function() {
     editGuideView.on("slide:chosen", function() {
 
       //To ensure that content won't get lost on slide change:
-      if ( typeof(editSlideView) !== "undefined" && editSlideView && editSlideView.model) {
-        latestContent = $('textarea.slide-content:first').val();
-        if ( editSlideView.model.get_field_value("content") !==  latestContent ) {
-          editSlideView.updateContent( latestContent )
-        };
-      };
+      //causing bug?
+      if (  (typeof(editSlideView) !== "undefined") && 
+            editSlideView &&
+            (editSlideView.$el.find('textarea.slide-content:first').length > 0)//if an element currently exists
+          ) {
+        
+        editSlideView.recordSlideContent();
+      }
       
       if (typeof(editSlideView) !== "undefined" && editSlideView && editSlideView.model) {
         editSlideView.remove();
@@ -247,21 +249,29 @@ loadPage = function() {
         }),
         instantiateEditorFn: function(options, thisView) {
           var e;
-          addGuideActionPluginToCKE();
-          debugger;
           e = CKEDITOR.replace(options.selector, options.ckEditorConfig);
           e.on("instanceReady", function() {
             var bbView = thisView;
-            this.document.on("keyup", function() {
+            bbView.recordSlideContent = function() {
               bbView.updateContent( e.getData() );
+            }
+            e.setData(bbView.model.get_field_value("content"));
+            this.document.on("keyup", function() {
+              bbView.recordSlideContent()
             });
+            this.document.on("mouseup", function() {
+              bbView.recordSlideContent()
+            });
+            this.document.on("change", function() {
+              bbView.recordSlideContent()
+            });            
           });
           return e;
         },
         instantiateEditorOptions: function() {
           return {
             ckEditorConfig: {
-              extraPlugins: 'oembed,guide_action'
+              extraPlugins: 'oembed'
             } 
           }
         }
