Fix error causing things to break.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <script language="Javascript" src="dynamo/vendor/tee.js"></script>
 <script language="Javascript" src="ckeditor/ckeditor.js"></script>
 
+<script type="text/javascript" src="dynamo/templates.js"></script>
 <script type="text/javascript" src="dynamo/Core.js"></script>
 <script type="text/javascript"> Dynamo.TriremeURL = Config.TriremeURL; </script>
 <script type="text/javascript" src="dynamo/Core.Models.js"></script>
