Add Font Editing to Editor

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     display:table-cell;
     margin:0 auto;
   }
-
 </style>
 
 <script type="text/javascript" src="config.js"></script>
@@ -192,7 +191,7 @@ loadPage = function() {
         instantiateEditorOptions: function() {
           return {
             ckEditorConfig: {
-              extraPlugins: 'oembed,guide_action'
+              extraPlugins: 'oembed,guide_action,font'
             } 
           }
         }
